--- a/client/src/Components/WhatsApp/WhatsApp.css
+++ b/client/src/Components/WhatsApp/WhatsApp.css
@@ -1,6 +1,7 @@
 .fondoWhatsapp{
     font-family: 'Montserrat', sans-serif;
-    background-color: #878BD9;  
+     
+    height: 40vh;
 }
 .btnayuda{
     background-color: #4A0E79;
