--- a/client/src/Components/Footer/Footer.css
+++ b/client/src/Components/Footer/Footer.css
@@ -1,18 +1,26 @@
-.container {
-    background-color: #F1EEDE;
+footer {
+    font-family: "Montserrat";
     display: flex;
-    padding: 8rem;
+    padding: 4rem 7rem 4rem 7rem;
     height: 20vh;
+    display: flex;
+    justify-content: space-between;
+ 
 }
 
 ul{
     list-style: none;
-    margin-left: 65rem;
+}
+li {
+    padding-bottom: 0.5rem;
 }
 
 a{
     color: black;
     text-decoration: none;
+    
+   
+    
 }
 
 a:hover {
@@ -20,13 +28,14 @@ a:hover {
 }
 
 .logo {
+     font-size: 2.5rem;
+     font-family: "Raleway";
      
-     
+          
 }
 
 h5{
-    margin-top: 5rem;
-
-    
+    margin-top: 10rem;
+   
 }
 
