--- a/client/src/Pages/IniciaSesion.css
+++ b/client/src/Pages/IniciaSesion.css
@@ -17,7 +17,7 @@ body {
     display: flex;
     justify-content: center;
     border-radius: 90px;
-    margin-top: 20px;
+    margin-top: 180px;
 }
 
 .p2 {
@@ -25,7 +25,7 @@ body {
     display: flex;
     justify-content: center;
     background-color:rgb(255, 255, 255);
-    /* margin-top: 150px; */
+    margin-top: 35px;
 }
 
 .login-form {
@@ -37,17 +37,31 @@ body {
     border-radius: 20px;
 }
 
-.login-username, .login-password {
+.login-username {
   background: rgba(200, 200, 200, 0.253);
   border: 0 solid;
   color: rgb(0, 0, 0);
   transition: 250ms;
-  width: 200px;
+  width: 250px;
   height: 35px;
   border-radius: 20px;
   display: flex;
-  margin-top: 120px;
-  margin-left: 125px;
+  margin-top: 10px;
+  margin-left: 100px;
+  text-align: center;
+}
+
+.login-password {
+  background: rgba(200, 200, 200, 0.253);
+  border: 0 solid;
+  color: rgb(0, 0, 0);
+  transition: 250ms;
+  width: 250px;
+  height: 35px;
+  border-radius: 20px;
+  display: flex;
+  margin-top: 10px;
+  margin-left: 100px;
   text-align: center;
 }
 
@@ -66,4 +80,10 @@ body {
   margin-top: 30px;
   margin-left: 150px;
 
+}
+
+.img {
+  width: 400px;
+  height: 300px;
+  background-color: rgb(255, 255, 255);
 }
