--- a/client/src/Components/Foro/Foro.css
+++ b/client/src/Components/Foro/Foro.css
@@ -1,55 +1,52 @@
 .fondoForo{
     font-family: 'Montserrat';
-    height: 40vh;
+    height: 40vw;
+    background-color: #a1a4db;
+    display: flex;
+    flex-direction: column;
+    padding: 5vw;
 }
 .tituloForo {
-    font-size: 35px;
-    color: #4A0E79;
-    font-weight: bold;
-    font-family: 'Montserrat';
-    margin-bottom: 20px;
-    margin-left: 150px;
-    text-align: left;
+    font-size: 3.5vw;
+    color: #4A0E79;  
+    /* background-color: darkgreen; */
 }
 .parrafoForo1{
-    font-size: 30px;
-    color: #091531;
-    font-family: 'Montserrat';
-    margin-bottom: 7px;
-    margin-left: 105px;
-    text-align: center;
+    align-self: center;
+    font-size: 2vw;   
+    padding-bottom: 1vw; 
+    padding-top: 3vw;
 }
 .parrafoForo2{
-    font-size: 25px;
-    color: #091531;
-    font-family: 'Montserrat';
-    margin-bottom: 10px;
-    margin-left: 105px;
-    text-align: center;
+    align-self: center;
+    font-size: 1.5vw;
+    padding-bottom: 5vw; 
+    
 }
 .parrafoForo3{
-    font-size: 25px;
-    color: #091531;
-    font-family: 'Montserrat', sans-serif;
-    margin-top: 40px;
-    margin-bottom: 10px;
-    margin-left: 400px;
-    /* text-align: center; */
-}
-.btnForo{
-    font-family: 'Montserrat', sans-serif;
-    background-color: #F1EEDE;
-    color: #4A0E79;
+    align-self: center;
+    font-size: 1.8vw;
     font-weight: bold;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    width:250px;
-    height: 40px;
-    border-radius:9px;
-    justify-content:center;
-    align-items:center;
-    align-content: center;
-    display:fixed;
-    right:600px;
-    margin-left: 450px;
+    padding-bottom: 2vw; 
+    
+}
+
+.link-foro{
+    
+    background-color: #F1EEDE;
+    color: #4A0E79;  
+    border-radius: 15px;
+    width: 20vw;
+    align-self: center;
+    padding: 1vw;
+    text-align: justify;
+    font-size: 1.5vw;
+    
+}
+
+.foro-line{
+    background: #f17a09;
+        height: 4px;
+        width: 10vw;
+        margin-top: 0;
 }
