--- a/client/src/Components/Header/Header.css
+++ b/client/src/Components/Header/Header.css
@@ -1,39 +1,27 @@
 .conteinerImg {
     display: flex;
-    height: 80vh;
+    height: 50vw;
+    flex-direction: column;
+    /* background-color: coral; */
+    background-color: #F1EEDE;
+    z-index: -1;
+    padding: 2vw 5vw 3vw 5vw;
+    
 }
 
 .imgMujeres {
-    width: 4000px;
-    height: 550px;
-    margin-top: 100px;
-    margin-right: 400px;
-    /* height: 522px;
-    width: 986px;
-    left: 87px;
-    border-radius: 0px; */
+   /*  background-color: chartreuse; */
+    width: 75vw;
+    height: auto;
+    align-self: center;
+    
+    
 }
 
 .textS {
-    margin-left: 80px;
+    
     font-family: Raleway;
-    font-size: 70px;
-    /* height: 72px;
-    width: 222px; */
-    /* left: 53px;
-    top: 106px; */
-    border-radius: nullpx;
+    font-size: 5vw;
 
 }
 
-.textH {
-    font-family: Montserrat;
-    margin-top: 150px;
-    margin-right: 150px;
-    /* height: 31px;
-    width: 489px;
-    left: 53px;
-    top: 195px;
-    border-radius: nullpx; */
-
-}
