--- a/client/src/Components/NavBar/NavBar.css
+++ b/client/src/Components/NavBar/NavBar.css
@@ -1,33 +1,84 @@
-.conteiner {
-    height: 20vh;
-    display: flex;
-    justify-content: space-around;
+.container-nav{
+    min-height: 10vh;
+    max-height: 20vh;
+    max-width: 100vw;
+    display:flex;
     align-items: center;
+    font-size: 1vw;
+    font-family: "Montserrat";
+    background-color: #F1EEDE;
+    padding: 5vw;
+    
 }
-
-a {
-    text-decoration: none;
+h1{
+    font-family: "Raleway";
+    font-size: 3vw;
 }
-
-.s {
+a{
     text-decoration: none;
-    font-family: Raleway;
+    font-weight: bolder;
     color: black;
 }
-
-.textNav {
-    text-decoration: none;
-    font-family: Montserrat;
-    font-style: bold;
-    color: black;
+ul{
+    display: flex;
+    list-style: none;
+    width: 90vw;
+    justify-content: space-around;
 }
 
-.btnReg {
-    background-color: #878BD9;
-    font-family: Montserrat;
-    font-size: bold;
-    border-color: transparent;
-    width: 90px;
-    height: 30px;
-    border-radius: 20px;
+.logo{
+    font-size: 3vw;
+    align-self: center;
+    font-family: "Raleway";
+    margin-top: 1rem;
 }
+
+.nav-line{
+    background: #f17a09;
+        height: 2px;
+        width: 9vw;
+        margin-top: 10px;
+}
+
+/* 
+@media(max-width: 500px){
+    .container-nav{
+        
+        width: 100vw;
+        font-size: 1rem;
+        display: flex;
+        flex-direction: column;
+        height: 10vh;
+        
+    }
+    .logo{
+        font-size: 1rem;
+        align-self: center;
+       
+        font-family: "Raleway";
+        margin-top: 1rem;
+    }
+    .ul-nav{
+        max-width: 80vw;
+        width: 70vw;
+        font-size: 0.5rem;
+        
+        display: flex;
+        align-self: center;
+        font-family: "Montserrat";
+        margin: 1rem;
+        
+    }
+    li{
+        justify-content: space-between;
+        list-style: none;
+        padding: 0.3rem;
+        
+    }
+    a{
+        text-decoration: none;
+        color: black;
+    }
+}
+
+ */
