--- a/client/src/Pages/RegistrateLugarSeguro.css
+++ b/client/src/Pages/RegistrateLugarSeguro.css
@@ -4,9 +4,15 @@
     text-align: center;
     margin-top: 0px;
 } 
-.title{
+/* .title{
     text-decoration: underline;
     text-decoration-color: #FEA166;
+} */
+.postlugarSeguro-line{
+    background: #f17a09;
+    height: 4px;
+    width: 445px;
+    margin-left: 390px;
 }
 .primerparrafo{
     margin-top: 20px;
@@ -23,7 +29,7 @@
     margin:auto;
     box-shadow: 0 0 1rem rgba(128, 128, 128, 0.3);
     width: 700px; 
-    height: 820px; 
+    height: 900px; 
     border-radius: 20px;
 }
 ::placeholder { color: #BBBABA; }
@@ -84,6 +90,17 @@
     font-size: 20px;    
 }
 .formnumber{
+    border:  1px solid #C4C4C4;
+    background-color:  #FFFFFF;
+    color: #BBBABA;
+    text-align: center;
+    border-radius: 20px;
+    width: 364px;
+    height: 52px;
+    margin-top: 10px;
+    font-size: 20px;       
+}
+.formpostcode{
     border:  1px solid #C4C4C4;
     background-color:  #FFFFFF;
     color: #BBBABA;
