--- a/client/src/Pages/RegistrateLugarSeguro.css
+++ b/client/src/Pages/RegistrateLugarSeguro.css
@@ -4,9 +4,15 @@
     text-align: center;
     margin-top: 0px;
 } 
-.title{
+/* .title{
     text-decoration: underline;
     text-decoration-color: #FEA166;
+} */
+.postlugarSeguro-line{
+    background: #f17a09;
+    height: 4px;
+    width: 445px;
+    margin-left: 390px;
 }
 .primerparrafo{
     margin-top: 20px;
@@ -23,14 +29,13 @@
     margin:auto;
     box-shadow: 0 0 1rem rgba(128, 128, 128, 0.3);
     width: 700px; 
-    height: 820px; 
+    height: 900px; 
     border-radius: 20px;
 }
 ::placeholder { color: #BBBABA; }
 .formname{
     border: 1px solid #C4C4C4;
     background-color:  #FFFFFF;
-    color: #BBBABA;
     transition: 250ms;
     text-align: center;
     border-radius: 20px;
@@ -42,7 +47,6 @@
 .formlastname{
     border:  1px solid #C4C4C4;
     background-color:  #FFFFFF;
-    color: #BBBABA;
     text-align: center;
     border-radius: 20px;
     width: 364px;
@@ -64,7 +68,6 @@
 .formtown{
     border:  1px solid #C4C4C4;
     background-color:  #FFFFFF;
-    color: #BBBABA;
     text-align: center;
     border-radius: 20px;
     width: 364px;
@@ -75,7 +78,6 @@
 .formstreet{
     border:  1px solid #C4C4C4;
     background-color:  #FFFFFF;
-    color: #BBBABA;
     text-align: center;
     border-radius: 20px;
     width: 364px;
@@ -86,7 +88,16 @@
 .formnumber{
     border:  1px solid #C4C4C4;
     background-color:  #FFFFFF;
-    color: #BBBABA;
+    text-align: center;
+    border-radius: 20px;
+    width: 364px;
+    height: 52px;
+    margin-top: 10px;
+    font-size: 20px;       
+}
+.formpostcode{
+    border:  1px solid #C4C4C4;
+    background-color:  #FFFFFF;
     text-align: center;
     border-radius: 20px;
     width: 364px;
@@ -107,7 +118,6 @@
 .formtelephone{
     border:  1px solid #C4C4C4;
     background-color:  #FFFFFF;
-    color: #BBBABA;
     text-align: center;
     border-radius: 20px;
     width: 364px;
@@ -118,7 +128,6 @@
 .formkeyword{
     border:  1px solid #C4C4C4;
     background-color:  #FFFFFF;
-    color: #BBBABA;
     text-align: center;
     border-radius: 20px;
     width: 364px;
@@ -129,7 +138,6 @@
 .formrelation{
     border:  1px solid #C4C4C4;
     background-color:  #FFFFFF;
-    color: #BBBABA;
     text-align: center;
     border-radius: 20px;
     width: 364px;
