--- a/client/src/Pages/IniciaSesion.css
+++ b/client/src/Pages/IniciaSesion.css
@@ -3,11 +3,13 @@
     display: flex;
     justify-content: center;
     margin-top: 0px;
+    font-size: 35px;
 }
 
 body {
   font-family: Montserrat;
   font-weight: 100;
+  background-color: #F1EEDE;
 }
 
 .p {
@@ -17,7 +19,7 @@ body {
     display: flex;
     justify-content: center;
     border-radius: 90px;
-    margin-top: 180px;
+    margin-top: 30px;
 }
 
 .p2 {
@@ -82,8 +84,43 @@ body {
 
 }
 
+.login-username:hover {
+  transform: scale(1.10);
+}
+
+.login-password:hover {
+  transform: scale(1.10);
+
+}
+
 .img {
   width: 400px;
   height: 300px;
   background-color: rgb(255, 255, 255);
+}
+
+.btnGoogle {
+  margin-top: 60px;
+  margin-left: 70px;
+  background: white;
+  color: rgb(0, 0, 0);
+  width: 300px;
+  height: 60px;
+  border-radius: 45px;
+  border: thin solid #888;
+  box-shadow: rgb(68, 68, 68);
+  white-space: nowrap;
+  font-family: Montserrat;
+  font-size: 40px;
+  text-align: center;
+  transition: 250ms;
+
+}
+
+.btnGoogle:hover {
+  transform: scale(1.05);
+}
+
+.login-submit:hover {
+  transform: scale(1.10);
 }
