--- a/client/src/Pages/RegistrateLugarSeguro.css
+++ b/client/src/Pages/RegistrateLugarSeguro.css
@@ -4,9 +4,18 @@
     text-align: center;
     margin-top: 0px;
 } 
-.title{
+/* .title{
     text-decoration: underline;
     text-decoration-color: #FEA166;
+} */
+.postlugarSeguro-line{
+    background: #f17a09;
+    height: 2px;
+    width: 445px;
+    margin-top: 10px;
+    justify-content: center;
+    /* width: 445px;
+    margin-left: 390px; */
 }
 .primerparrafo{
     margin-top: 20px;
@@ -23,7 +32,7 @@
     margin:auto;
     box-shadow: 0 0 1rem rgba(128, 128, 128, 0.3);
     width: 700px; 
-    height: 820px; 
+    height: 790px; 
     border-radius: 20px;
 }
 ::placeholder { color: #BBBABA; }
@@ -39,17 +48,6 @@
     margin-top: 40px;
     font-size: 20px; 
 } 
-.formlastname{
-    border:  1px solid #C4C4C4;
-    background-color:  #FFFFFF;
-    color: #BBBABA;
-    text-align: center;
-    border-radius: 20px;
-    width: 364px;
-    height: 52px;
-    margin-top: 10px;
-    font-size: 20px;
-}
 .formcountry{
     border:  1px solid #C4C4C4;
     background-color:  #FFFFFF;
@@ -150,3 +148,37 @@
     display:fixed;
     font-size: 25px;
 }
+.signo{
+    color: #BBBABA;
+}
+.caja {
+    position: relative; /*Para poder ubicar la info dentro de la caja*/
+    margin: 10px auto;
+    }
+    .caja img {
+    border:2px solid black;
+    }
+    .info {
+    font-family: Montserrat;
+    font-size: 12px;
+    text-align: center;
+    width: 90px;
+    height:150px;
+    
+    position: absolute; /*Info sobre la imagen*/
+    top: 5%;
+    left: 10%; /*Desplazamos a partir de la esquina superior izquierda*/
+    zoom: 1;
+    filter: alpha(opacity=0); /*Opacidad Para IE */
+    opacity: 0; /*Inicialmente transparente */
+    padding: 5px;
+    color: white;
+    background: rgb(139, 129, 129);
+    -moz-transition:all ease .8s; /*Aplicamos una ligera transición*/
+    -webkit-transition:all ease .8s ;
+    transition:all ease .8s;
+    }
+    .caja:hover .info {
+    filter: alpha(opacity=80);
+    opacity: .8; /*Al hacer hover sobre la caja hacemos visible los datos*/
+    }
