--- a/client/src/Pages/RegistrateLugarSeguro.css
+++ b/client/src/Pages/RegistrateLugarSeguro.css
@@ -11,8 +11,8 @@
 .postlugarSeguro-line{
     background: #f17a09;
     height: 4px;
-    width: 445px;
-    margin-left: 390px;
+    width: 490px;
+    margin-left: 430px;
 }
 .primerparrafo{
     margin-top: 20px;
@@ -170,11 +170,11 @@
     font-family: Montserrat;
     font-size: 12px;
     text-align: center;
-    width: 90px;
-    height:150px;
-    /* position: absolute; 
+    width: 105px;
+    height:145px;
+    position: absolute; 
     top: 5%;
-    left: 10%; */
+    left: 10%;
     zoom: 1;
     filter: alpha(opacity=0); /*Opacidad Para IE */
     opacity: 0; /*Inicialmente transparente */
@@ -189,3 +189,16 @@
     filter: alpha(opacity=80);
     opacity: .8; 
     }
+    .cuadradito {
+        border:  1px solid #C4C4C4;
+        background-color: #FFFFFF;
+        margin:auto;
+        margin-left: 540px;
+        margin-top: -50px;
+        margin-bottom: 20px;
+        /* height: 52px;    */
+        width: 20px; 
+        height: 20px; 
+        border-radius: 5px;
+    }
+
