--- a/client/src/Pages/RegistrateLugarSeguro.css
+++ b/client/src/Pages/RegistrateLugarSeguro.css
@@ -192,6 +192,7 @@
     .cuadradito {
         border:  1px solid #C4C4C4;
         background-color: #FFFFFF;
+        color: #BBBABA;
         margin:auto;
         margin-left: 540px;
         margin-top: -50px;
