--- a/client/src/Pages/sities/PageSitie.css
+++ b/client/src/Pages/sities/PageSitie.css
@@ -60,11 +60,17 @@
   padding: 4px;
   display: none;
 }
+.mapa{
+  width:800px;
+  height: 100%;
+  overflow: hidden;
+  padding: 16px 24px 24px 0;
+}
 .app-content {
   display: flex;
   height: 100%;
   overflow: hidden;
-  padding: 16px 24px 24px 0;
+  padding: 20px 24px 24px 20px;
 }
 
 .app-sidebar {
