cambios front y ruta

--- a/client/src/Pages/Sities/Sities.css
+++ b/client/src/Pages/Sities/Sities.css
@@ -300,6 +300,8 @@
   align-items: center;
   margin-bottom: 24px;
   color: var(--main-color);
+  padding-left:40px;
+  padding-to:40px;
 }
 
 .time {
