--- a/client/src/Components/Mapa/Mapa.css
+++ b/client/src/Components/Mapa/Mapa.css
@@ -47,3 +47,83 @@ a{
         
     
 }
+
+/* CSS */
+.button-24 {
+    height: 16px;
+    width: 6vw;
+    margin:5px;
+    background: #FF4742;
+    border: 1px solid #FF4742;
+    border-radius: 6px;
+    box-shadow: rgba(0, 0, 0, 0.1) 1px 2px 4px;
+    box-sizing: border-box;
+    color: #FFFFFF;
+    cursor: pointer;
+    display: inline-block;
+    font-family: nunito,roboto,proxima-nova,"proxima nova",sans-serif;
+    font-size: 10px;
+    font-weight: 800;
+    line-height: 16px;
+    outline: 0;
+    padding: 0px 0px;
+    text-align: center;
+    text-rendering: geometricprecision;
+    text-transform: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    vertical-align: middle;
+  }
+  
+  .button-24:hover,
+  .button-24:active {
+    background-color: initial;
+    background-position: 0 0;
+    color: #FF4742;
+  }
+  
+  .button-24:active {
+    opacity: .5;
+  }
+  
+
+
+  /* CSS */
+.button-25 {
+  height: 16px;
+  width: 6vw;
+  margin:5px;
+  background: #3d42ad;
+  border: 1px solid #3d42ad;
+  border-radius: 6px;
+  box-shadow: rgba(0, 0, 0, 0.1) 1px 2px 4px;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-block;
+  font-family: nunito,roboto,proxima-nova,"proxima nova",sans-serif;
+  font-size: 10px;
+  font-weight: 800;
+  line-height: 16px;
+  outline: 0;
+  padding: 0px 0px;
+  text-align: center;
+  text-rendering: geometricprecision;
+  text-transform: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: middle;
+}
+
+.button-25:hover,
+.button-25:active {
+  background-color: initial;
+  background-position: 0 0;
+  color: #3d42ad;
+}
+
+.button-25:active {
+  opacity: .5;
+}
