--- a/client/src/Pages/Conocenos.css
+++ b/client/src/Pages/Conocenos.css
@@ -28,6 +28,7 @@
     flex-direction: column;
     padding: 2vw 5vw 5vw 5vw;
     background-color: #F1EEDE;
+    font-family: 'Montserrat', sans-serif;
 }
 
 
