--- a/client/src/Pages/Sities/Sities.css
+++ b/client/src/Pages/Sities/Sities.css
@@ -301,7 +301,7 @@
   margin-bottom: 24px;
   color: var(--main-color);
   padding-left:40px;
-  padding-to:40px;
+  padding-top:40px;
 }
 
 .time {
