--- a/client/src/Pages/Sities/Sities.css
+++ b/client/src/Pages/Sities/Sities.css
@@ -603,3 +603,16 @@
       color: var(--main-color);
        margin: 0;
     }
+    .btninput{
+      border:  1px solid #FEA166;
+      background-color: #FEA166;
+      width: 364px;
+      height: 52px; 
+      border-radius:20px;
+      margin-top: 20px;
+      justify-content:center;
+      align-items:center;
+      align-content: center;
+      display:fixed;
+      font-size: 25px;
+  }
