--- a/client/src/Components/ForoNoticias/ForoNoticias.css
+++ b/client/src/Components/ForoNoticias/ForoNoticias.css
@@ -1,30 +1,55 @@
+.proyectocontainer{
+    padding: 1vw 5vw 1vw 5vw;
+    background-color: #F1EEDE;
+    font-family: Montserrat;
+    display: flex;
+    flex-direction: column;
+}
 .tituloforo{
-    font-size: 2vw;
+    font-size: 3vw;
     text-align: center;
     align-self: center; 
     margin-bottom: 0.5vw;
 }
 .foroNoticiasSeguro-line{
     background: #f17a09;
-    height: 0.1vw;
-    width: 10vw;
+    height: 0.2vw;
+    width: 8vw;
+    margin-top: 0;
+    align-self: center; 
+    margin-bottom: 2vw;
+    
+}
+.imgNotamujeres{
+    width: 71vw;
+    height: auto;
     align-self: center;
+    margin-left: auto; 
+    margin-right: auto;
+ 
     
 }
 .titulonoti{
-    font-family: 'Montserrat', sans-serif;
-    font-size: 2vw;
-    text-align:start;
-    align-self: center; 
+    font-size: 1.8vw;
+    margin-left: -350px;
+    align-self: center;
+    margin-top: 1vw; 
     margin-bottom: 0.5vw;
 }
 .rectangulonoticia {
     background-color: #FFFFFF;
     margin:auto;
     box-shadow: 0 0 1rem rgba(128, 128, 128, 0.3);
-    width: 900px; 
-    height: 600px; 
+    width: 1000px; 
+    height: 500px; 
     border-radius: 20px;
+}
+.parrafonoti{
+    text-align:justify;
+    margin-left: 2vw;
+    margin-top: 2vw;
+    margin-right: 2vw;
+ 
 }
 .btnnotianterior{ 
     border:  1px solid #FEA166;
@@ -32,7 +57,7 @@
     width: 140px;
     height: 30px; 
     border-radius:20px;
-    margin-left: 340px;
+    margin-left: 50px;
     margin-top: 20px;
     justify-content:center;
     align-items:center;
@@ -48,7 +73,7 @@
     width: 140px;
     height: 30px; 
     border-radius:20px;
-    margin-left: 400px;
+    margin-left: 725px;
     margin-top: 20px;
     justify-content:center;
     align-items:center;
@@ -60,7 +85,7 @@
     font-size: 2vw;
     color: #4A0E79;
     text-align:start;
-    margin-left: 100px;
+    margin-right: 800px;
     margin-top: 40px;
     align-self: center; 
     margin-bottom: 0.5vw;  
@@ -72,9 +97,9 @@
     background-color:  #FFFFFF;
     text-align:center;
     border-radius: 20px;
-    width: 750px;
+    width: 850px;
     height: 80px;
-    margin-left: 300px;
+    margin-left: 140px;
     margin-top: 10px;
     font-size: 20px;  
 }
