--- a/client/src/Components/ForoNoticias/ForoNoticias.css
+++ b/client/src/Components/ForoNoticias/ForoNoticias.css
@@ -11,7 +11,7 @@
     align-self: center; 
     margin-bottom: 0.5vw;
 }
-.foroNoticiasSeguro-line{
+.foroNoticias-line{
     background: #f17a09;
     height: 0.2vw;
     width: 8vw;
