--- a/client/src/Components/Sidebar/Sidebar.css
+++ b/client/src/Components/Sidebar/Sidebar.css
@@ -1,69 +1,164 @@
 #Sidebar {
-    width: 300px;
+    width: 600px;
     height: 700px;
     justify-content: center;
     position: absolute;
     z-index: 5;
     top: 350px;
+    font-family: Montserrat;
+    margin-left: 20px;
+    border-radius: 50px;
 }
-  /* #Sidebar .pro-sidebar {
-    height: 100%;
-  } */
+
   #Sidebar .closemenu {
     color: #000;
     position: absolute;
-    right: 0;
-    z-index: 9999;
-    line-height: 20px;
+    margin-top: 230px;
+    margin-left: 210px;
     border-radius: 50%;
     font-weight: bold;
-    font-size: 22px;
+    font-size: 40px;
     cursor: pointer;
   }
-  #Sidebar .pro-sidebar {
+  /* #Sidebar .pro-sidebar {
     width: 100%;
     min-width: 100%;
     z-index: 5;
-  }
+  } */
   #Sidebar .pro-sidebar.collapsed {
     width: 80px;
     min-width: 80px;
+    
   }
   #Sidebar .pro-sidebar-inner {
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.856);
     box-shadow: 0.5px 0.866px 2px 0px rgba(0, 0, 0, 0.15);
   }
   #Sidebar .pro-sidebar-inner .pro-sidebar-layout {
     overflow-y: hidden;
   }
   #Sidebar .pro-sidebar-inner .pro-sidebar-layout .logotext p {
-    font-size: 20px;
-    padding: 0 20px;
+    font-size: 40px;
+    font-family: Montserrat;
+    display: flex;
+    justify-content: center;
     color: #000;
     font-weight: bold;
   }
-  #Sidebar .pro-sidebar-inner .pro-sidebar-layout ul {
+  /* #Sidebar .pro-sidebar-inner .pro-sidebar-layout ul {
     padding: 0 5px;
-  }
-  #Sidebar .pro-sidebar-inner .pro-sidebar-layout ul .pro-inner-item {
+  } */
+  /* #Sidebar .pro-sidebar-inner .pro-sidebar-layout ul .pro-inner-item {
     color: #000;
     font-weight: bold;
-  }
-  #Sidebar .pro-sidebar-inner .pro-sidebar-layout ul .pro-inner-item .pro-icon-wrapper {
+    font-size: 100px;
+  } */
+  /* #Sidebar .pro-sidebar-inner .pro-sidebar-layout ul .pro-inner-item .pro-icon-wrapper {
     background-color: #fbf4cd;
     color: #000;
     border-radius: 3px;
-  }
-  #Sidebar .pro-sidebar-inner .pro-sidebar-layout ul .pro-inner-item .pro-icon-wrapper .pro-item-content {
+  } */
+  /* #Sidebar .pro-sidebar-inner .pro-sidebar-layout ul .pro-inner-item .pro-icon-wrapper .pro-item-content {
     color: #000;
-  }
-  #Sidebar .pro-sidebar-inner .pro-sidebar-layout .active {
+    font-size: 100px;
+    background-color: black;
+  } */
+  /* #Sidebar .pro-sidebar-inner .pro-sidebar-layout .active {
     background-image: linear-gradient(0deg, #fece00 0%, #ffe172 100%);
-  }
-  #Sidebar .logo {
+  } */
+  /* #Sidebar .logo {
     padding: 20px;
+  } */
+
+  .btnSide {
+      color: black;
+      margin-left: 230px;
+      margin-top: 15px;
+      background-color: rgba(250, 7, 7, 0.479);
+      width: 25px;
+      height: 25px;
+      border-radius: 100%;
   }
+
+  .info {
+    font-size: 100px;
+}
+
+.txt1 {
+  font-size: 20px;
+  color: #000;
+  font-family: Montserrat;
+  display: flex;
+  justify-content: center;
+}
   
+.txt2 {
+  font-size: 20px;
+  color: #000;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+}
+
+.kw {
+  font-size: 18px;
+  color: #000;
+  font-weight: bold;
+  font-family: Montserrat;
+  display: flex;
+  justify-content: center;
+}
+
+.cont {
+  background-color: #c9bcdf;
+  border-radius: 25px;
+  width: 205px;
+  margin-left: 32px;
+}
+
+.iconnn {
+  margin-top: 4px;
+  margin-right: 8px;
+}
+
+.titleLine{
+  background: #f17a09;
+  height: 3px;
+  width: 130px;
+  margin-left: 70px;
+}
+
+.denuncia {
+  display: flex;
+  justify-content: center;
+  color: #000;
+}
+
+.denunciaTit {
+  display: flex;
+  justify-content: center;
+  color: #000;
+}
+
+.btnRes {
+  background-color: #baa8dacc;
+  width: 180px;
+  height: 50px;
+  color: #000;
+  border-radius: 35px;
+  border-color: #000;
+  margin-left: 45px;
+}
+
+.denuncia:hover {
+  transform: scale(1.20);
+  transition: 5.s;
+}
+
+.btnSide:hover {
+  background-color: rgb(243, 48, 48);
+}
+
   @media only screen and (max-width: 720px) {
     html {
       overflow: hidden;
